--- a/css/style.css
+++ b/css/style.css
@@ -6,23 +6,16 @@
 }
 
 .navbar{
-    /* background-color: #f3f0f0;  */
-         background-color: transparent;
-         position:fixed;
-         left: 0px; right: 0px; 
-         opacity: 0.5;
-  }
+    background-color: transparent;
+    position: fixed;
+    left: 0px;
+    right: 0px;
+    opacity: 1;
 
-.float-left{
-    float: left;
- }
-
- .float-right{
-    float: left;
- }
-
-.clear-fix{
-    clear: both;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
 }
 
 .fokir{
@@ -31,55 +24,57 @@
     margin-left:3%;
     font-size: 30px;
     color: red;
-    /* margin: 10px 5px; */
-  }
+}
+
+.menu{
+    width: auto;
+    color: #fff;
+    margin-top: 1.5%;
+    margin-right:3%;
+}
 
 .fokir a{
     text-decoration: none;
     text-transform: capitalize;
-    color: #fff;
+    color: #e61717;
     list-style: none;
     width: fit-content;
-}
-
-.menu{
-    width: 79%;
-    color: #fff;
-    margin-top: 1.5%;
+    font-weight: bolder;
 }
 
 .menu ul{
     list-style: none;
-    width: fit-content;
-    margin-left: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .menu ul li a{
     text-decoration: none;
     text-transform: capitalize;
     color: #fff;
+    transition: all 0.3s ease-in-out;
 }
 
-  .menu ul li{
-    margin: 15px 15px;
-  }
+.menu ul li a:hover{
+    color: #f11440;
+}
 
+.menu ul li{
+    margin: 15px 15px;
+}
 
 .section1 p{
     font-size:30px;
     color:#ffffffef;
-    /* text-align: center; */
 }
 
 h1{
     font-size:50px;
-    /* text-align: center; */
     text-transform: uppercase;
     color:#ff305b;
     font-size: 70px;
     font-weight: bold;
-
-    /* padding-top: 5%; */
 }
 
 
@@ -87,6 +82,7 @@ h1{
     width: 100%;
     height: 75px;
     text-align: center;
+
 }
 .Child1{
     margin-top: 15%;
@@ -94,17 +90,9 @@ h1{
 
 .sec1-parent{
 display: flex;
-
-/* flex-wrap: wrap;
-height: 100vh;
-align-items: center; */
-
 flex-direction: row;
-
 justify-content: center;
 align-items: center;
-
-/* height: 100vh; */
 
 }
 
@@ -116,7 +104,6 @@ align-items: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center; 
-
     position: relative;
 }
 
@@ -136,7 +123,6 @@ background-color: #424141a4;
 .child-2{
     width: 40%;
     height: auto;
-    /* background-color: rgb(151, 127, 206); */
 }
 
 .section2{
@@ -147,7 +133,6 @@ flex-wrap: wrap;
 
 justify-content: space-evenly;
 }
-
 
 .div-box{
     width: 80%;
@@ -169,10 +154,8 @@ color: #666;
 }
 
 .child22 hr{
- /* border:dotted;   */
  border-color: #666;
  border-style: dotted;
- /* border-color: #fff;  */
 }
 
 .btn{
@@ -187,8 +170,8 @@ color: #666;
     font-size: 16px;
     cursor: pointer;
     /* opacity: 0.2; */
-    transition: 0.5s; */
-    /* appearance: auto; */
+    transition: 0.5s;
+
 }
 
 .btn:hover {
@@ -203,18 +186,13 @@ background-color: red
 
 .child-2 img{
     width: 100%;
-    /* position: absolute; */
 }
 
 .personal-data{
     width: 50%;
 }
     
-/* .sec2-divlinks{
-        width: 30%;
- } */
- 
- .sec2-divlinks{
+.sec2-divlinks{
     margin:20px;
     width: 30%;
     background-color: red;
@@ -223,7 +201,6 @@ background-color: red
 }
 
 .overlay-slide{
-    
     /* display: none; */
     background-color: rgba(26, 25, 25, 0.404);
     position: absolute;
@@ -291,26 +268,22 @@ background-color: rgb(167, 164, 164);
 
 .section4{
     margin-top: 5%;
-    /* padding: 2%; */
     text-align: center;
 }
     
     
-  .section4 h3{
+.section4 h3{
         margin-bottom: 2%;
         font-size: 35px;
-    }
+}
 
- .section4 a{
+.section4 a{
     text-decoration: none; 
     padding: 1%;
-    /* margin-bottom: 5%; */
-    
- }
+}
 
  .sec4-parent{    
     display: flex;
-    /* background-color: teal; */
     width: 100%;
     height: auto;
     justify-content: space-evenly;
@@ -321,32 +294,29 @@ background-color: rgb(167, 164, 164);
 .image-card{
     width: 25%;
     height: auto;
-    /* padding: 1%; */
     background-color: red;
     position: relative;
-    /* overflow: hidden; */
 }
 
  .sec4-parent img{
     width: 100%;
-    /* padding: 1%; */
- }
+}
 
  .overlay{
-    
-    display: none;
+    /* display: none; */
+    opacity: 0;
     background-color: rgba(78, 87, 95, 0.514);
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height:100% ;
-    /* transition: all 2s 1.5s; */
-    /* transition:all 0.5s ease-in-out; */
+    transition: all 0.3s ease-in-out;
 }
 
 .image-card:hover .overlay{
-    display:block;
+    /* display:block; */
+    opacity: 1;
     /* transition: all 1s ease-in-out; */
     /* left: 0; */
 }
@@ -431,22 +401,26 @@ background-color: rgb(167, 164, 164);
 .input-sec{
     width: 50%;
     height: auto;
-    padding: 1%;
-    background-color: teal; 
+    padding: 2%;
+    /* background-color: teal;  */
 }
+
 #name-txt ,#email-txt{
 width: 300px;
-height: 30px;
+height: 40px;
+margin-bottom: 20px;
 }
 
 #subjet-txt{
     width: 610px;
-    height: 30px;
+    height: 40px;
+    margin-bottom: 20px;
 }
 
 #areatxt{
     width: 610px;
-    height: 60px; 
+    height: 70px; 
+    margin-bottom: 20px;
 }
 
 /* ---------8--end------- */
@@ -456,28 +430,31 @@ height: 30px;
 .sec-end{
     background-color: #444343;
     color: #fff;
-    /* padding-top: 1%; */
     width: 100%;
-    /* margin: auto; */
-
-
+    
     margin-top: 5%;
     padding-top: 2%;
     padding-bottom: 3%;
 
     font-size: 18px;
-    /* background: rgb(201, 199, 199); */
     justify-content: center;
     align-items: center; 
-    /* display: flex; */
     text-align: center;
 }
 
-.sec-end a{
+.sec-end a {
     padding: 1%;
-    /* background-color: #666; */
     color: #fff;
     text-decoration: none;
+}
+
+.section2 a{
+    /* margin: 5%; */
+    color: #fff;
+    text-decoration: none;
+    font-size: 20px;
+    width: 20px;
+    margin-right: 15px;
 }
 
 .copyright{
@@ -487,4 +464,36 @@ height: 30px;
 
 ul {
     list-style: none;
+}
+
+.mline{
+    height: 20px;
+    width: 200px;
+    /* border-color: red transparent; */
+    border-color: red ;
+    border-style: solid;
+    border-left: 0px;
+    border-right:0px;
+    position: relative;
+}
+
+
+.sline::before {
+    content: '';
+    width: 100%;
+    border-bottom: solid 3px red;
+    position: absolute;
+    left: -50%;
+    top: 45%;
+}
+
+/* z-index: 1; */
+
+.sline::after {
+    content: '';
+    width: 100%;
+    border-bottom: solid 3px red;
+    position: absolute;
+    left: 50%;
+    top: 45%;
 }
