--- a/css/style.css
+++ b/css/style.css
@@ -134,18 +134,6 @@ flex-wrap: wrap;
 justify-content: space-evenly;
 }
 
-.div-box{
-    width: 80%;
-    height: 90%;
-    border: solid;
-    border-radius: 5px;
-    border-color: #000;
-    position: relative;
-    top: -10px;
-    left:-10px;
-    /* overflow: hidden; */
-}
-
 .con-center{
 padding: 2%;
 font-size: 17px;
@@ -184,20 +172,29 @@ background-color: red
   transform: translateY(4px);
 }
 
-.child-2 img{
-    width: 100%;
-}
+
+/* --Sliding Img-- */
 
 .personal-data{
     width: 50%;
 }
     
-.sec2-divlinks{
+.slide-Card{
     margin:20px;
     width: 30%;
-    background-color: red;
-    position: relative;
-    overflow: hidden;
+    /* background-color: red; */
+    border: 5px solid gray;
+}
+
+.card-details{
+width: 100%;
+height: inherit;
+transform: translate(10px,20px);
+overflow: hidden;
+}
+
+.child-2 img{
+    width: 100%;
 }
 
 .overlay-slide{
@@ -211,7 +208,7 @@ background-color: red
     transition: 2s ease-in-out;
 }
 
-.sec2-divlinks:hover .overlay-slide{
+.slide-Card:hover .overlay-slide{
     /* display:block; */
     left: 0;
 }
